--- a/HelloPlugin/CMakeLists.txt
+++ b/HelloPlugin/CMakeLists.txt
@@ -14,6 +14,7 @@ set(HELLOPLUGIN_PLUGIN_SOURCES
     #${QVGUIPLUGIN_INTERFACE_HEADERS}
     )
 
+# 生成库 MODULE,在使用 dyld 的系统有效,如果不支持 dyld,则被当作 SHARED 对待。
 add_library(${HELLOPLUGIN_PLUGIN_TARGET} MODULE
     #${CMAKE_CURRENT_LIST_DIR}/resx.qrc
     ${HELLOPLUGIN_PLUGIN_SOURCES}
